# visualizer

./: .gitignore  CMakeLists.txt  README.md  Readme.md  expr  expr2  expr3  expr4  expr5  out  run.sh  tree.txt
src/: Expr.h  Stmt.h  astprinter.cpp  astprinter.h  lox.cpp  lox.h  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h  tokens.h
src/meta/: Expr.h  Expr.txt  Makefile  Stmt.txt  a.out  gen.cpp  run.sh  test.cpp
test/: grammer  test.cpp  tokens.txt
web2/: lox  package-lock.json  package.json  pnpm-lock.yaml
web2/src/components/: EditorComponent.tsx  TreeComponent.tsx
web2/src/pages/: index.tsx
web2/src/pages/api/: compile.ts  hello.ts
